--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /ar-lib
 config.guess
 config.sub
+config.mk
 ltmain.sh
 /m4/**/*
 *.Makefile
@@ -45,6 +46,7 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
+build/
 
 # Visual Studio 2015 cache/options directory
 .vs/
